# zapis-stavy-fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: deploy-tf.yml  test.yml
api/: auth.py  aws.py  config.py  db.py  exceptions.py  logging_config.py  main.py  schemas.py  security.py  utils.py
api/db_models/: base.py  const.py  meters.py  readings.py  users.py
api/models/: base.py  locations.py  meters.py  readings.py  users.py
api/repositories/: locations.py  users.py
api/routers/: auth.py  locations.py  meters.py  readings.py  users.py
api/routes/: meters.py  readings.py  users.py
api/schemas/: base.py  locations.py  meters.py  users.py
api/services/: auth.py  locations.py  users.py
bruno_collection/: .env.example  confirm.yml  create location.yml  delete location.yml  delete user.yml  healthcheck.yml  login.yml  opencollection.yml  register user.yml  select locations.yml  update location.yml  update user.yml
bruno_collection/environments/: Zapis Stavy.yml
postman_collection/: Zapis Stavy.postman_collection.json
scripts/: init-db.sh  init-db.sql  init_db.sqlite  init_db_pg.sql
sql/: common.sql  init.sql  locations.sql  meters.sql  places.sql  readings.sql  users.sql
terraform/: appregistry.tf  backend.tf  cloudwatch-logs.tf  iam-role-gh-action.tf  iam-role-gh-deploy-tf.tf  iam-user.tf  locals.tf  logs.tf  resource-group.tf  ses.tf
tests/: assertions.py  conftest.py
tests/end_to_end/: test_main.py
tests/integration/: conftest.py  test_auth.py  test_db_models.py  test_routes.py
tests/integration/routers/: test_auth.py  test_locations.py  test_main.py  test_meters.py  test_readings.py  test_users.py
tests/routers/: test_meters.py
tests/unit/: conftest.py  test_auth.py  test_routes.py  test_security.py  utils.py
tests/unit/routers/: test_auth.py  test_locations.py  test_meters.py  test_readings.py  test_users.py
tmp_sqlalchemy/: db.py  main.py  models.py
tmp_sqlalchemy/routers/: auth.py  locations.py  users.py
tmp_sqlalchemy/services/: locations.py  users.py
zapis_stavy_api/: main.py
zapisstavyapi/: config.py  db.py  db_models.py  logging_config.py  main.py  models.py  routes.py  utils.py
zapisstavyapi/models/: reading.py  utility.py
zapisstavyapi/routers/: reading.py  utility.py
