[project]
name = "zapis-stavy-fastapi"
version = "0.1.0"
description = "API for Zapis Stavy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "boto3>=1.42.91",
    "fastapi>=0.128.0",
    "psycopg[binary,pool]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.21",
    "slowapi>=0.1.9",
    "uvicorn>=0.38.0",
    "watchtower>=3.4.0",
]
[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "testcontainers[postgres]>=4.14.2",
    "sqlfluff>=4.2.1",
    "pytest-env>=1.5.1",
]


[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "E501", # line too long
    "N",    # PEP8 naming
    "R",    # RSE - flake8 raise, RET - flake8 return, RUF - ruff specific
    "I",    # isort
    "C901", # mccabe - complexity
    "PD",   # pandas
    "NPY",  # numpy
    "D"     # pydocstyle
]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D107", # missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"api/schemas/*" = ["D101"] # missing docstring in public class
"tests/*" = [
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = ["no-any-return", "union-attr", "misc"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
markers = [
    "integration: marks online tests for routers, using postgres container db.",
    "end_to_end: marks end to end test of user journeys, using postgres container db.",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.pytest_env]
ENV = "test"
JWT_SECRET_KEY = "secret"
AWS_ACCESS_KEY_ID = ""
AWS_SECRET_ACCESS_KEY = ""
AWS_REGION_NAME = ""
# needed for initial setup, gets overwritten by testcontainers db
DB_NAME = ""
DB_USERNAME = ""
DB_PASSWORD = ""
